code refactoring and reformatting

--- a/templates/info.html
+++ b/templates/info.html
@@ -5,7 +5,7 @@
   </head>
   <body>
 	<h1>Title: {{ title }}</h1>
-    <h5>URL: {{ url }}
+    <h5>URL: {{ url }}:</h5>
     {% if description %}
     <h5>Description:</h5> {{ description }}<
     {% endif %}
